--- a/OdeToFood.Web/OdeToFood.Web.csproj
+++ b/OdeToFood.Web/OdeToFood.Web.csproj
@@ -165,6 +165,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\GreetingViewModel.cs" />
+    <Compile Include="Models\ViewModels\RestaurantFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +208,7 @@
     <Content Include="Views\Greeting\Index.cshtml" />
     <Content Include="Views\Restaurants\Index.cshtml" />
     <Content Include="Views\Restaurants\Details.cshtml" />
+    <Content Include="Views\Restaurants\RestaurantForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
